# apk-killer-java-mod-menu

./: .gitignore  README.md  build.gradle  license.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: APKKiller.h  CMakeLists.txt  Muffin.cpp  Utils.cpp  Utils.h  main.cpp
app/src/main/cpp/Menu/: Setup.h
app/src/main/cpp/includes/: Logger.h
app/src/main/cpp/menu/: Menu.h
app/src/main/java/com/android/support/: CrashHandler.java  Launcher.java  Main.java  Menu.java  Preferences.java
app/src/main/java/com/muffin/: APKKiller.java
app/src/main/java/com/muffin/app/: MainActivity.java  MainApplication.java
app/src/main/java/com/muffin/whale/: VMHelper.java  WhaleRuntime.java
app/src/main/java/com/muffin/whale/xposed/: ClassUtils.java  MemberUtils.java  XC_MethodHook.java  XC_MethodReplacement.java  XposedBridge.java  XposedHelpers.java
app/src/main/java/com/muffin/whale/xposed/callbacks/: XCallback.java
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
